Increase backend test coverage